--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Twitter in macOS menu bar",
   "main": "main.js",
-  "dependencies": {
-    "electron": "^1.8.3"
+  "dependencies": {},
+  "devDependencies": {
+    "electron-prebuilt-compile": "1.8.3"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
